--- a/style.css
+++ b/style.css
@@ -1,9 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
+
+* {
+    font-family: 'Source Code Pro', monospace;
+}
+
+@keyframes rise {
+    from {top: 10vh;}
+    to {top: 100vh;}
+}
+
+.sun_moonrise {
+    animation: rise 2s ease 2s 1 reverse forwards;
+}
+
 html {
-    scroll-behavior: smooth
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
+main .sun_moon {
+    position: absolute;
+    top: 100vh;
+    left: calc(50vw - 100vh);
+    background-color: white;
+    border-radius: 50%;
+    height: 200vh;
+    width: 200vh;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 body {
-    background-image: radial-gradient(grey, black);
     background-size: auto 100vmax;
     background-repeat: repeat;
     background-position: center;
@@ -24,14 +53,17 @@ main .container-fluid {
 } 
 
 nav, footer span {
-    background-image: radial-gradient(grey, black);
     background-size: auto 100vmax;
     background-repeat: repeat;
     background-position: center;
     background-attachment: fixed;
 } 
 
-.jumbotron, .list-group, .list-group *, .card *,  nav{
+nav * {
+    mix-blend-mode: ;
+}
+
+.jumbotron, .list-group, .list-group *, .card *{
     background-color: transparent;
 }
 
@@ -39,11 +71,7 @@ nav, footer span {
     background-color: transparent;
     background-size: contain;
     border: none !important;
-    color: white !important;
-}
-
-input:focus, textarea:focus {
-    background-color: #33333388 !important;
+    color: #222 !important;
 }
 
 input {
@@ -53,7 +81,6 @@ input {
 }
 
 input:focus, textarea:focus {
-    background-color: #33333388 !important;
     outline: 0;
     box-shadow: 0 0 0 0.2rem rgba(248,249,250,.5) !important;
 }
@@ -73,7 +100,7 @@ p {
 }
 
 p a {
-    color: white;
+    color: #222;
     padding: 0.5;
     margin: 0;
     border: none;
@@ -81,7 +108,6 @@ p a {
 }
 
 p a:hover {
-    color: white;
     border-bottom: 4px solid white;
     padding: 0;
     margin: 0 0.5rem;
@@ -133,4 +159,8 @@ footer {
     background-color: transparent;
 }
 
+
+#about_me article {
+    margin: 0 15px;
+}
 
