--- a/style.css
+++ b/style.css
@@ -9,27 +9,106 @@
     to {top: 100vh;}
 }
 
-.sun_moonrise {
+/* .sun_moonrise {
     animation: rise 2s ease 2s 1 reverse forwards;
-}
+} */
 
 html {
     max-width: 100vw;
     overflow-x: hidden;
 }
 
-main .sun_moon {
+section {
+    position: relative;
+}
+
+main > img {
     position: absolute;
-    top: 100vh;
-    left: calc(50vw - 100vh);
-    background-color: white;
-    border-radius: 50%;
-    height: 200vh;
-    width: 200vh;
+    left: auto;
+    width: 50vw;
+    height: auto;
+    overflow-x: hidden;
+}
+
+.frame{
+    position: relative;
+    border: 1px solid red;
+    /* position: relative; */
+    background-image: url("macbook.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    width: 600px;
+    height: 330px;
+    margin: auto;
+    /* margin-bottom: 50px; */
+
+}
+
+.frame img {
+    margin: 5% 10%;
+    padding: 10px;
+    /* display: inline-block; */
+    /* vertical-align: auto; */
+    position: absolute;
+    height: 78%;
+    width: 75.5%
+    /* object-fit: cover; */
+}
+
+.sun_moon svg{
+    position: absolute;
+    left: 0;
+    fill: transparent;
+    stroke: "none";
+    animation: rise 2s ease 0s 1 reverse forwards;
+    height: 100vw;
+    width: 100vw;
+}
+
+.sun_moon > svg > circle {
+    fill: transparent
+}
+
+#about_me > .water  {
+    position: absolute;
+    top: -10vh;
+    /* box-shadow: 0 -40px 10px -10px lightBlue; */
+    margin: auto 0;
+    background-image: linear-gradient(lightBlue 0%, lightblue 30%, skyBlue 30%, skyBlue 75%, #42a7d6 75%, #42a7d6 100%);
+    /* opacity: 0.3; */
+    width: 100vw;
+    height: calc(100% + 10vh);
+    mix-blend-mode: hard-light;
+}
+
+#portfolio .deep {
+    position: absolute;
+    margin: auto 0;
+    top: 0;
+    height: 100vh;
+    width: 100vw;
+    background-image: linear-gradient(skyBlue 0%, skyBlue 85%, lightBlue 85%, lightBlue 100%);
+    mix-blend-mode: hard-light;
+}
+
+/* #projects article:nth-child(odd) {
+    margin: auto 0 !important;
+    background-color: #eee;
+} */
+
+#about_me {
+    /* background-color: red; */
+    mix-blend-mode: add;
 }
 
 html {
     scroll-behavior: smooth;
+}
+
+i {
+    width: 100vw;
+    height: auto;
 }
 
 body {
@@ -37,8 +116,12 @@ body {
     background-repeat: repeat;
     background-position: center;
     background-attachment: fixed;
+    padding: 0;
 }
 
+/* img {
+    
+} */
 
 main {
     overflow-y: auto;
@@ -59,8 +142,16 @@ nav, footer span {
     background-attachment: fixed;
 } 
 
-nav * {
-    mix-blend-mode: ;
+footer {
+    mix-blend-mode: exclusion;
+}
+
+nav, nav * {
+    background-color: transparent;
+}
+
+button.navbar-toggler {
+    background-color: white;
 }
 
 .jumbotron, .list-group, .list-group *, .card *{
@@ -70,24 +161,19 @@ nav * {
 .card {
     background-color: transparent;
     background-size: contain;
-    border: none !important;
+    /* border: none !important; */
+    background-color: #eee;
     color: #222 !important;
 }
 
-input {
-    border: none !important;
-    border-bottom: 4px solid white !important;
+input, textarea {
+    border: 2px solid grey;
     border-radius: 0 !important;
 }
 
 input:focus, textarea:focus {
     outline: 0;
     box-shadow: 0 0 0 0.2rem rgba(248,249,250,.5) !important;
-}
-
-textarea {
-    border: 4px solid white !important;
-    border-radius: 0 !important;
 }
 
 p {
@@ -145,8 +231,8 @@ p a:hover {
 }
 
 .call button:focus, .call button:hover {
-    color: #212529;
-    background-color: #dae0e5 !important;
+    color: white;
+    background-color: #222 !important;
     text-decoration: underline;
 }
 
@@ -159,8 +245,8 @@ footer {
     background-color: transparent;
 }
 
-
-#about_me article {
-    margin: 0 15px;
+@media (min-width: 768px) {
+    nav, nav * { 
+        background-color: white;
+    }
 }
-
