--- a/style.css
+++ b/style.css
@@ -9,10 +9,6 @@
     to {top: 100vh;}
 }
 
-/* .sun_moonrise {
-    animation: rise 2s ease 2s 1 reverse forwards;
-} */
-
 html {
     max-width: 100vw;
     overflow-x: hidden;
@@ -32,7 +28,7 @@ main > img {
 
 .frame{
     position: relative;
-    border: 1px solid red;
+
     /* position: relative; */
     background-image: url("macbook.png");
     background-repeat: no-repeat;
@@ -46,15 +42,22 @@ main > img {
 }
 
 .frame img {
-    margin: 5% 10%;
+    margin: 46px 26px;
     padding: 10px;
     /* display: inline-block; */
     /* vertical-align: auto; */
     position: absolute;
-    height: 78%;
-    width: 75.5%
-    /* object-fit: cover; */
+    /* height: 220px;
+    width: 340px; */
+    object-fit: cover;
 }
+
+/* .frame img {
+    margin: 5% 0%;
+    padding: 10px;
+    height: 78%;
+    width: 80%
+} */
 
 .sun_moon svg{
     position: absolute;
@@ -73,10 +76,8 @@ main > img {
 #about_me > .water  {
     position: absolute;
     top: -10vh;
-    /* box-shadow: 0 -40px 10px -10px lightBlue; */
     margin: auto 0;
     background-image: linear-gradient(lightBlue 0%, lightblue 30%, skyBlue 30%, skyBlue 75%, #42a7d6 75%, #42a7d6 100%);
-    /* opacity: 0.3; */
     width: 100vw;
     height: calc(100% + 10vh);
     mix-blend-mode: hard-light;
@@ -92,13 +93,7 @@ main > img {
     mix-blend-mode: hard-light;
 }
 
-/* #projects article:nth-child(odd) {
-    margin: auto 0 !important;
-    background-color: #eee;
-} */
-
 #about_me {
-    /* background-color: red; */
     mix-blend-mode: add;
 }
 
@@ -119,15 +114,10 @@ body {
     padding: 0;
 }
 
-/* img {
-    
-} */
-
 main {
     overflow-y: auto;
     scroll-snap-type: mandatory !important;
     scroll-snap-points-y: repeat(100vh) !important;
-    scroll-snap-type: y mandatory !important;
 }
 
 main .container-fluid {
@@ -159,7 +149,6 @@ button.navbar-toggler {
 }
 
 .card {
-    background-color: transparent;
     background-size: contain;
     /* border: none !important; */
     background-color: #eee;
@@ -245,8 +234,62 @@ footer {
     background-color: transparent;
 }
 
+@media (min-width:0) {
+      .frame img {
+        margin: 17% 5%;
+        padding: 10px;
+        height: 60%;
+        width: 82%
+    }
+}
+
+@media (min-width:0px) {
+      .frame img {
+        margin: 11% 5.5%;
+        padding: 2%;
+        height: 70%;
+        width: 82%
+    }
+}
+
+@media (min-width: 576px) {
+    .frame img {
+        margin: 14.5% 5%;
+        padding: 10px;
+        height: 63%;
+        width: 82%
+    }
+}
+
 @media (min-width: 768px) {
     nav, nav * { 
         background-color: white;
     }
+
+    .frame img {
+        margin: 29% 3.5%;
+        padding: 10px;
+        height: 48%;
+        width: 83%
+    }
 }
+
+@media (min-width: 992px) {
+    .frame img {
+        margin: 12% 6%;
+        padding: 10px;
+        height: 65%;
+        width: 81%
+    }
+}
+
+
+@media (min-width: 1200px) {
+    .frame img {
+        margin: 5% 7%;
+        padding: 10px;
+        height: 78%;
+        width: 80%
+    }
+}
+
