--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 html {
     max-width: 100vw;
     overflow-x: hidden;
+    min-width: 434px;
 }
 
 section {
@@ -28,8 +29,6 @@ main > img {
 
 .frame{
     position: relative;
-
-    /* position: relative; */
     background-image: url("macbook.png");
     background-repeat: no-repeat;
     background-size: contain;
@@ -37,27 +36,12 @@ main > img {
     width: 600px;
     height: 330px;
     margin: auto;
-    /* margin-bottom: 50px; */
-
 }
 
 .frame img {
-    margin: 46px 26px;
-    padding: 10px;
-    /* display: inline-block; */
-    /* vertical-align: auto; */
     position: absolute;
-    /* height: 220px;
-    width: 340px; */
     object-fit: cover;
 }
-
-/* .frame img {
-    margin: 5% 0%;
-    padding: 10px;
-    height: 78%;
-    width: 80%
-} */
 
 .sun_moon svg{
     position: absolute;
@@ -130,11 +114,8 @@ nav, footer span {
     background-repeat: repeat;
     background-position: center;
     background-attachment: fixed;
+    background-color: white;
 } 
-
-footer {
-    mix-blend-mode: exclusion;
-}
 
 nav, nav * {
     background-color: transparent;
@@ -234,23 +215,40 @@ footer {
     background-color: transparent;
 }
 
-@media (min-width:0) {
-      .frame img {
-        margin: 17% 5%;
+@media (min-width: 0px) and (max-width: 575px) {
+      /* .frame img {
+        margin: 0 5%;
         padding: 10px;
-        height: 60%;
-        width: 82%
+        height: 95%;
+        width: 80%
+    }
+
+    .frame{
+      max-width: 300px;
+      max-height: 165px;
+    } */
+
+    .frame img {
+      margin: 0 5%;
+      padding: 10px;
+      height: 95%;
+      width: 80%
+    }
+
+    .frame{
+      max-width: 300px !important;
+      max-height: 165px !important;
     }
 }
-
-@media (min-width:0px) {
+/* 
+@media (min-width: 482px) {
       .frame img {
         margin: 11% 5.5%;
         padding: 2%;
         height: 70%;
         width: 82%
     }
-}
+} */
 
 @media (min-width: 576px) {
     .frame img {
@@ -262,9 +260,6 @@ footer {
 }
 
 @media (min-width: 768px) {
-    nav, nav * { 
-        background-color: white;
-    }
 
     .frame img {
         margin: 29% 3.5%;
