--- a/style.css
+++ b/style.css
@@ -10,10 +10,12 @@
 }
 
 html {
-    max-width: 100vw;
-    overflow-x: hidden;
-    min-width: 434px;
+    font-size: calc(45% + 1vw) !important;
     scroll-behavior: smooth;
+}
+
+main {
+    overflow-x: hidden;
 }
 
 section {
@@ -30,7 +32,7 @@ main > img {
 
 .frame{
     position: relative;
-    background-image: url("macbook.png");
+    background-image: url("images/macbook.png");
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
@@ -46,7 +48,7 @@ main > img {
 
 .sun_moon svg{
     position: absolute;
-    left: 0;
+    left: calc(50% - 50vw);
     fill: transparent;
     stroke: "none";
     animation: rise 2s ease 0s 1 reverse forwards;
@@ -55,7 +57,7 @@ main > img {
 }
 
 .sun_moon > svg > circle {
-    fill: transparent
+    fill: transparent;
 }
 
 #about_me > .water  {
@@ -151,9 +153,14 @@ p {
     font-size: 1.5rem !important;
 }
 
+.project-list > h3:first-child::before {
+    content: "  \2666  ";
+    color: #eee !important;
+}
+
 .project-list > h3::after {
     content: "  \2666  ";
-    color: #eee;
+    color: #eee !important;
 }
 
 .project-list > h3:last-child:after {
@@ -222,6 +229,7 @@ footer {
 
 /* added the below media queries so that the image inside of the laptop screen would center right*/
 
+/* extra-small */
 @media (min-width: 0px) and (max-width: 575px) {
 
     .frame img {
@@ -235,8 +243,13 @@ footer {
       max-width: 300px !important;
       max-height: 165px !important;
     }
+
+    article {
+        min-height: 50vh !important;
+    }
 }
 
+/* small */
 @media (min-width: 576px) {
     .frame img {
         margin: 14.5% 5%;
@@ -244,8 +257,14 @@ footer {
         height: 63%;
         width: 82%
     }
+
+    section, article {
+        min-height: 100vh !important;
+    }
+
 }
 
+/* medium */
 @media (min-width: 768px) {
 
     .frame img {
@@ -256,6 +275,7 @@ footer {
     }
 }
 
+/* large */
 @media (min-width: 992px) {
     .frame img {
         margin: 12% 6%;
@@ -265,7 +285,7 @@ footer {
     }
 }
 
-
+/* extra-large */
 @media (min-width: 1200px) {
     .frame img {
         margin: 5% 7%;
