--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@
     to {top: 100vh;}
 }
 
-
 html {
     font-size: calc(45% + 1vw) !important;
     scroll-behavior: smooth;
@@ -18,14 +17,6 @@ html {
 section {
     position: relative;
 }
-
-/* main > img {
-    position: absolute;
-    left: auto;
-    width: 50vw;
-    height: auto;
-    overflow-x: hidden;
-} */
 
 .frame {
     position: relative;
@@ -83,10 +74,6 @@ section {
   position: relative;
   top: 2vmin;
   left: 1%;
-  /* width: 100% !important;
-  border-top: 20px solid #c0c0c0;
-  border-left: 25px solid rgba(0, 0, 0, 0);
-  border-right: 25px solid rgba(0, 0, 0, 0);*/
   box-shadow: 0 10px 30px;
   width:98%;
   height: 20px;
@@ -103,7 +90,6 @@ section {
     animation: rise 2s ease 0s 1 reverse forwards;
     height: 100vw;
     width: 100vw;
-    margin-top: 15px;
 }
 
 .sun_moon > svg > circle {
@@ -134,11 +120,6 @@ section {
     mix-blend-mode: add;
 }
 
-/* i {
-    width: 100vw;
-    height: auto;
-} */
-
 body {
     background-size: auto 100vmax;
     background-repeat: repeat;
@@ -148,8 +129,6 @@ body {
 }
 
 main {
-    /* overflow-y: auto; */
-    /* max-width: 100vw; */
     overflow-x: hidden;
     scroll-snap-type: mandatory !important;
     scroll-snap-points-y: repeat(100vh) !important;
@@ -161,16 +140,57 @@ main .container-fluid {
 
 nav, footer span {
     /* this simulates a border around the nav text */
-    text-shadow:
-        -1px -1px 0 white,  
+    text-shadow: -1px -1px 0 white,  
         1px -1px 0 white,
         -1px  1px 0 white,
         1px  1px 0 white;
-        background-color: transparent;
+    background-color: transparent;
 } 
+
+#navbarNav > ul > li {
+    position: relative !important;
+    background-color: white;
+    border-radius: 50% 50% 0 0;
+    box-shadow: 0 0 15px white;
+    width: auto !important;
+    float: right;
+}
 
 nav * {
     background-color: transparent;
+}
+
+.sub-nav-content {
+  display: none;
+  position: absolute;
+  right: 1rem;
+  width: auto;
+  z-index: 1;
+  background-color: #ffffffdd;
+  box-shadow: 0 0 15px white;
+  justify-content: flex-end;
+  flex: row;
+}
+
+.sub-nav {
+  float: right;
+  overflow: hidden;
+}
+
+.sub-nav {
+    background-color: white;
+    border-radius: 50% 50% 0 0;
+    box-shadow: 0 0 15px white;
+}
+
+ul.sub-nav > li {
+  /* position:  !important; */
+  left: 10px !important;
+  display: inline;
+}
+
+.sub-nav:hover .sub-nav-content {
+  display: flex;
 }
 
 button.navbar-toggler {
@@ -204,26 +224,24 @@ p {
     font-size: 1.5rem !important;
 }
 
-.project-list > h3:first-child::before {
+/* .project-list > h3:first-child::before {
+    content: "  \2666  ";
+    color: #007bff !important;
+    opacity: 0.3;
+} */
+
+.project-list > h3::before {
     content: "  \2666  ";
     color: #007bff !important;
     opacity: 0.3;
 }
 
-.project-list > h3::after {
+.project-list > h3:last-child::after {
     content: "  \2666  ";
     color: #007bff !important;
     opacity: 0.3;
 }
 
-.project-list > h3:last-child:after {
-    content: "  \2666  ";
-}
-
-
-.row a:hover p {
-    color: white !important;
-}
 
 p a {
     margin: 0;
@@ -231,26 +249,22 @@ p a {
 
 }
 
-p a:hover {
-    border-bottom: 4px solid white;
+p a, .call a {
+    transition: all 0.2s linear;
+    /* border-bottom: 3px solid;
+    border-color: transparent; */
+    text-decoration: none !important;
+    line-height: 100%;
+    /* text-shadow: 0 0 3px #007bff66; */
 }
 
-/* .row svg {
-    position: relative;
-    animation-name: move_arrow;
-    animation-duration: 1s;
-    animation-direction: alternate;
-    animation-iteration-count: infinite;
-} */
-
-@keyframes move_arrow {
-    from {top: -10px;}
-    to {top: 10px;}
+p a:hover, .call a:hover {
+    text-shadow: 0 0 5px white, 0 0 15px white, 0 0 20px white;
+    color: #0056b3;
+    /* border-bottom: 3px solid;
+    border-color: #0056b3; */
 }
 
-.row a:hover svg {
-    fill: white;
-}
 
 .call{
     font-size: 1.5rem;
@@ -280,71 +294,37 @@ footer {
     background-color: transparent;
 }
 
-/* added the below media queries so that the image inside of the laptop screen would center right*/
+/* added the below media queries so that the sun/moon image stops at the middle on smaller devices*/
 
 /* extra-small */
 @media (min-width: 0px) and (max-width: 575px) {
 
-    /* .frame img {
-      margin: 0 5%;
-      padding: 10px;
-      height: 95%;
-      width: 80%
-    } */
-
-    /* .frame{
-      max-width: 300px !important;
-      max-height: 165px !important;
-    }*/
-
-    article {
-        min-height: 50vh !important;
+    @keyframes rise-mobile {
+    from {top: calc(50vh - 50vw);}
+    to {top: 100vh;}
     }
+
+    .sun_moon svg{
+    animation: rise-mobile 2s ease 0s 1 reverse forwards;
+    }
+
+    #navbarNav > ul > li {
+    background: none;
+    box-shadow: none;
+    height: auto;
+    }
+
 }
 
 /* small */
 @media (min-width: 576px) {
-    /* .frame img {
-        margin: 14.5% 5%;
-        padding: 10px;
-        height: 63%;
-        width: 82%
-    } */
 
     section, article {
         min-height: 100vh !important;
     }
 
+  /* .navbar-collapse > ul > li {
+    background: none;
+    box-shadow: none;
+  } */
 }
-
-/* medium */
-/* @media (min-width: 768px) {
-
-    .frame img {
-        margin: 29% 3.5%;
-        padding: 10px;
-        height: 48%;
-        width: 83%
-    }
-} */
-
-/* large */
-/* @media (min-width: 992px) {
-    .frame img {
-        margin: 12% 6%;
-        padding: 10px;
-        height: 65%;
-        width: 81%
-    }
-} */
-
-/* extra-large */
-/* @media (min-width: 1200px) {
-    .frame img {
-        margin: 5% 7%;
-        padding: 10px;
-        height: 78%;
-        width: 80%
-    } */
-}
-
